Project/Phase2/test_ex/test5.out
Error type 8 at line 4: incompatiable return type
