Project/Phase2/test_ex/test5.spl
int calculateSum()
{
    float sum = 10.5 + 20.5;
    return sum;
}

int main()
{
    int result = calculateSum();
    return 0;
}

